--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@Pratham. All rights reserved. 2022.</span>
+                <span class="copyright">@Pratham Singhal. All rights reserved. 2023.</span>
             </div>
         </div>
     </footer>
